# mtx-toolbox

./: CMakeLists.txt  README.md  gitUpdates.sh  main.cpp  runMatrix,sh
.github/workflows/: ccpp.yml  makefile.yml
DENSE_MATRIX/: Makefile  intmkl  intmkl.cpp  main  main.cpp
DENSE_MATRIX/BTEST/: CMakeLists.txt  main.cpp  runScript.sh
DENSE_MATRIX/GTEST/: CMakeLists.txt  runScript.sh
DENSE_MATRIX/GTEST/Boost/: CMakeLists.txt  main.cpp  runScript.sh
DENSE_MATRIX/GTEST/GSL/: CMakeLists.txt  main.cpp
DENSE_MATRIX/GTEST/INTELMKL/: CMakeLists.txt  main.cpp  runScript.sh
DENSE_MATRIX/GTEST/Intel/: CMakeLists.txt  main.cpp  runScript.sh
DENSE_MATRIX/GTEST/Intel/intel_src/: CMakeLists.txt  intelmkl.cpp  intelmkl.hpp
DENSE_MATRIX/include/: Allocate.hpp  DenseMatrix.hpp  Display.hpp  Timer.hpp  matrix.hpp  parallel.hpp
DENSE_MATRIX/src/: Allocate.cpp  DenseMatrix.cpp  Display.cpp  Timer.cpp  matrix.cpp  parallel.cpp
SPARSE_MATRIX/examples/: Makefile  README.md  cc_io_prb  cc_io_prb.cpp  example_write.c  matrix_test.cpp  spmv_framework.cpp
SPARSE_MATRIX/include/: SparseCSR.hpp  cc_io.h  mmio.h
SPARSE_MATRIX/src/: cc_io.c
examples/: performance.cpp
include/: cc_io.hpp
